# wb-data-lakehouse

./: .gitignore  E156-PROTOCOL.md  pyproject.toml  review-findings.md
docs/superpowers/plans/: 2026-04-08-wb-data-lakehouse.md
docs/superpowers/specs/: 2026-04-08-wb-data-lakehouse-design.md
registry/: sources.yaml
src/wb_data_lakehouse/: __init__.py  api.py  catalog.py  cli.py  config.py  normalize.py  registry.py  storage.py
src/wb_data_lakehouse/promote/: __init__.py  africa_dev.py  climate.py  cpia.py  doing_business.py  education.py  energy.py  esg.py  financial_dev.py  food_nutrition.py  gender.py  governance.py  hci.py  health_equity.py  hnp.py  id4d.py  logistics.py  malnutrition.py  net_savings.py  population.py  poverty.py  sdg_health.py  stat_performance.py  uhc.py  wdi.py  wealth.py
src/wb_data_lakehouse/sources/: __init__.py  africa_dev.py  climate.py  cpia.py  doing_business.py  education.py  energy.py  esg.py  financial_dev.py  food_nutrition.py  gender.py  governance.py  hci.py  health_equity.py  hnp.py  id4d.py  logistics.py  malnutrition.py  net_savings.py  population.py  poverty.py  sdg_health.py  stat_performance.py  uhc.py  wdi.py  wealth.py
tests/: conftest.py  test_api.py  test_catalog.py  test_cli.py  test_normalize.py  test_promote.py  test_registry.py  test_sources.py  test_storage.py
tests/fixtures/: SP.DYN.LE00.IN.json  SP.POP.TOTL.json  wb_api_indicator_response.json  wb_api_metadata_response.json  wdi_sample.csv
