[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wb-data-lakehouse"
version = "0.1.0"
description = "API-driven pipeline for World Bank open data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=15.0",
  "requests>=2.31",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
wb-data = "wb_data_lakehouse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
